<resources>
    <string name="app_name">HabitNow</string>
    <string name="home">Home</string>
    <string name="launch_title">Welcome to HabitNow</string>
    <string name="launch_subtitle">Track your daily habits and build better routines.</string>
    <string name="launch_get_started">Get Started</string>
    <string name="greeting_morning">Good Morning, Alex 👋</string>
    <string name="daily_progress">Daily progress</string>
    <string name="my_habits">My Habits</string>
    <string name="mood_journal">Mood Journal</string>

    <string name="settings">Settings</string>
    <string name="quote_placeholder">“Small steps every day lead to big changes.”</string>
    <string name="hydration">Hydration</string>
    <string name="hydration_intervals_1h">Every 1 hour</string>
    <string name="hydration_intervals_2h">Every 2 hours</string>
    <string name="hydration_intervals_3h">Every 3 hours</string>
</resources>