<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/launch_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LaunchActivity">

	<TextView
		android:id="@+id/text_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:gravity="center"
		android:text="@string/launch_title"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.475"
		app:layout_constraintWidth_percent="0.8"
		tools:text="HabitNow" />

	<TextView
		android:id="@+id/text_subtitle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="392dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="center"
		android:text="@string/launch_subtitle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintWidth_percent="0.8"
		app:layout_goneMarginTop="16dp" />

	<Button
		android:id="@+id/button_get_started"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="40dp"
		android:text="@string/launch_get_started"
		android:textColorLink="#CDDC39"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintWidth_percent="0.6" />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="263dp"
		android:layout_height="215dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.445"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.319"
		app:srcCompat="@drawable/logo" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="376dp"
		android:layout_height="34dp"
		android:layout_marginBottom="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		tools:layout_editor_absoluteX="7dp">

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


